--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,10 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": ["node_modules/openseadragon/build/openseadragon/openseadragon.min.js",
-              "node_modules/svg-overlay/openseadragon-svg-overlay.js"]
+            "scripts": [
+              "node_modules/openseadragon/build/openseadragon/openseadragon.min.js",
+              "node_modules/svg-overlay/openseadragon-svg-overlay.js"
+            ]
           },
           "configurations": {
             "production": {
