--- a/package.json
+++ b/package.json
@@ -12,21 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.9",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
-    "@dasch-swiss/dsp-js": "^1.0.0-rc.3",
-    "@dasch-swiss/dsp-ui": "^1.0.0-rc.2",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
+    "@asymmetrik/ngx-leaflet": "^7.0.1",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@dasch-swiss/dsp-js": "^1.2.0",
+    "@dasch-swiss/dsp-ui": "^1.1.1",
+    "@types/leaflet": "^1.5.21",
     "@types/openseadragon": "^2.4.5",
+    "ckeditor5-custom-build": "github:dasch-swiss/ckeditor_custom_build",
+    "image-map": "^2.0.1",
     "jdnconvertiblecalendar": "0.0.5",
     "jdnconvertiblecalendardateadapter": "0.0.13",
+    "leaflet": "^1.7.1",
     "ngx-color-picker": "^10.1.0",
     "openseadragon": "^2.4.2",
     "rxjs": "~6.5.4",
@@ -36,12 +42,12 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "~9.1.9",
+    "@angular-devkit/build-angular": "^0.901.13",
+    "@angular/cli": "^9.1.13",
+    "@angular/compiler-cli": "^9.1.13",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.19.15",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
